--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -25,10 +25,6 @@ jobs:
 
       - name: Scan Dockerfiles and save report
         run: |
-          trivy fs . --exit-code 0 --severity HIGH,CRITICAL --format json --output trivy-report.json
+          trivy fs . --exit-code 0 --severity HIGH,CRITICAL
 
-      - name: Upload Trivy Report
-        uses: actions/upload-artifact@v3
-        with:
-          name: trivy-report
-          path: trivy-report.json
+
