updata call-docker

--- a/.github/workflows/call-docker-build-worker.yaml
+++ b/.github/workflows/call-docker-build-worker.yaml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - 'main'
+      - 'grupo7-practica-unidad-4'
     # only build when important files change
     paths:
       - 'worker/**'
